@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+
+    - Object::Pad now uses "field" instead of "slot" in API calls and naming conventions, so
+    we have updated to follow suit (and now depend on Object::Pad 0.61). Thanks to @eserte
+    for reporting.
 
 0.001     2021-10-25 04:19:24+08:00 Asia/Kuala_Lumpur
     Initial version.
